INTERNAL: Use non-static import in Bridge (ALL-410)
Code style static import:<br>
![image](/uploads/9125d0829636d5e910ea2afbbc9ed5ed/image.png)

Closes ALLIN-410

Reviewed-by: Adam Skubicha <askubicha@silenteight.com>
Reviewed-by: Adam Wójcicki <awojcicki@silenteight.com>
Merged from: https://gitlab.silenteight.com/hsbc-bank/hsbc-bridge/-/merge_requests/426